--- a/messenger/.env
+++ b/messenger/.env
@@ -1,7 +1,10 @@
 
-VITE_FIREBASE_APIKEY: "AIzaSyB56sOHcSHupTxJ8gbZjUt4sA_EOtWtnrs",
-VITE_FIREBASE_AUTHDOMAIN: "messenger-dc6a4.firebaseapp.com",
-VITE_FIREBASE_PROJECTID: "messenger-dc6a4",
-VITE_FIREBASE_STORAGE_BUCKET: "messenger-dc6a4.appspot.com",
-VITE_FIREBASE_MESSAGING_SENDER_ID: "202250912666",
-VITE_FIREBASE_APPID: "1:202250912666:web:1759c048c749969bdd3023"
+VITE_FIREBASE_APIKEY: "AIzaSyCEz0XpnujtjTul8_LLU8mydKcn3Bp3atY"
+VITE_FIREBASE_AUTHDOMAIN: "messenger-e00bc.firebaseapp.com"
+VITE_FIREBASE_PROJECTID: "messenger-e00bc"
+VITE_FIREBASE_STORAGE_BUCKET: "messenger-e00bc.appspot.com"
+VITE_FIREBASE_MESSAGING_SENDER_ID: "364501526665"
+VITE_FIREBASE_APPID: "1:364501526665:web:bde7aed8c0228188a23e58"
+
+
+ 
